@@ -40,17 +40,20 @@ public class SmsService {
     public static class SendSmsReq {
         String body;
         String sendNo;
+        String title;
         List<SendSmsRecipient> recipientList;
     }
 
-    public void sendSms(String receiveTel, String content) {
+    public void sendSms(String receiveTel, String content, String title) {
         RestTemplate restTemplate = new RestTemplate();
-        String url = BASE_URL + "/sms/v3.0/appKeys/" + apiKey + "/sender/sms";
+        boolean isSms = content.getBytes().length <= 90;
+        String url = BASE_URL + "/sms/v3.0/appKeys/" + apiKey + "/sender/" + (isSms ? "sms" : "mms");
         HttpHeaders headers = new HttpHeaders();
         headers.set("Content-Type", "application/json;charset=UTF-8");
         headers.set("X-Secret-Key", secretKey);
-        List<Map<String, Object>> recipientList = Arrays.asList(Map.of("recipientNo", receiveTel));
+        List<Map<String, Object>> recipientList = List.of(Map.of("recipientNo", receiveTel));
         Map<String, Object> map = new HashMap<>();
+        if (title != null) map.put("title", title);
         map.put("body", content);
         map.put("sendNo", sendTel);
         map.put("recipientList", recipientList);
